HTML (1) Import fontawesome icon databse js (2) Add Header Company Web Name, Weather section (3) Add Header Nav Button for different article section
SCSS
(1) Header id=Head, id=weather style
(2) Add SASS modules/_variable.scss for variables
(3) Add Navigation section style and 8 Buttons style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./sass/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/36398ab85c.js" crossorigin="anonymous"></script>
   <script src="./script/script.js" defer></script>
 
   <title>DouDouLand - A Dream Park For All People</title>
@@ -15,7 +16,31 @@
 <body>
 
   <header>
-    
+    <div id="head">
+      <button>Language</button>
+
+      <h1>DouDouLand</h1>
+
+      <div id="weather">
+        <span><i class="fa-solid fa-cloud-sun fa-xl"></i>Cloudy</span>
+        <span><i class="fa-solid fa-temperature-half"></i>11&deg;C</span>
+        <span>Monday</span>
+      </div>
+    </div>
+
+    <nav>
+      <ul id="header-list">
+        <li class="tab-button"><i class="fa-solid fa-house"></i>Home</li>
+        <li class="tab-button"><i class="fa-regular fa-newspaper"></i>News</li>
+        <li class="tab-button"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
+        <li class="tab-button"><i class="fa-solid fa-map-location-dot"></i>Map</li>
+        <li class="tab-button"><i class="fa-solid fa-ticket"></i>Tickets</li>
+        <li class="tab-button"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
+        <li class="tab-button"><i class="fa-regular fa-circle-question"></i>FAQ</li>
+        <li class="tab-button"><i class="fa-solid fa-envelope"></i>Contact us</li>
+
+      </ul>
+    </nav>
   </header>
   
   <section>
