--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <nav>
       <ul id="header-list">
+        <li class="tab-button" tab-data="section-home"><i tab-data="section-home" class="fa-solid fa-house"></i>Home</li>
         <li class="tab-button"><i class="fa-solid fa-house"></i>Home</li>
         <li class="tab-button"><i class="fa-regular fa-newspaper"></i>News</li>
         <li class="tab-button"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
@@ -45,7 +46,12 @@
   
   <section>
 
-    
+    <article class="tab-content" id="section-home">
+      <img src="./asset/pic/DouDouLand.webp" alt="DouDouLand">
+      <h2><i class="fa-solid fa-crown"></i><span>Welcome To DouDouLand</span><i class="fa-solid fa-crown"></i></h2>
+      <p>DouDouLand, a wondrous paradise nestled in Vancouver HappyWay, where imagination knows no bounds! Our amusement park is a vibrant tapestry of excitement and enchantment, inviting visitors of all ages to experience a world brimming with thrills and adventure.</p>
+    </article>
+
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
   </section>
 
