(1) Add Section - News
(2) Add createIcon.js to create specific icon in auto
- used to create "star" icon for different rating

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/36398ab85c.js" crossorigin="anonymous"></script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/createIcon.js" defer></script>
 
   <title>DouDouLand - A Dream Park For All People</title>
   <meta name="description" content="A Ultimate Theme Park Make Your Dreams Come True">
@@ -31,6 +32,7 @@
     <nav>
       <ul id="header-list">
         <li class="tab-button" tab-data="section-home"><i tab-data="section-home" class="fa-solid fa-house"></i>Home</li>
+        <li class="tab-button" tab-data="section-news"><i class="fa-regular fa-newspaper"></i>News</li>
         <li class="tab-button"><i class="fa-solid fa-house"></i>Home</li>
         <li class="tab-button"><i class="fa-regular fa-newspaper"></i>News</li>
         <li class="tab-button"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
@@ -50,6 +52,14 @@
       <img src="./asset/pic/DouDouLand.webp" alt="DouDouLand">
       <h2><i class="fa-solid fa-crown"></i><span>Welcome To DouDouLand</span><i class="fa-solid fa-crown"></i></h2>
       <p>DouDouLand, a wondrous paradise nestled in Vancouver HappyWay, where imagination knows no bounds! Our amusement park is a vibrant tapestry of excitement and enchantment, inviting visitors of all ages to experience a world brimming with thrills and adventure.</p>
+    </article>
+
+    <article class="tab-content hidden" id="section-news">
+      <img src="./asset/pic/Rollarcoster.webp" alt="News">
+      <h2>New Twisted-Coaster Started !!</h2>
+      <div class="star-rating" id="section-news-star"></div>
+      <p>Advanture Started on Coming Saturday !!!</p>
+      <p>Exploring the Twists of the Next-Gen Roller Coaster. With The Utimate G-Force and Speed Up To 200 Km/h!</p>
     </article>
 
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
