(1) Add Section - Map
In createIcon.js
(2) Add script to auto create Pin icon on the Map
(3) Add script to auto create div element when hover on the Pin
- Display pinned location Star Rating and info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="tab-button" tab-data="section-home"><i tab-data="section-home" class="fa-solid fa-house"></i>Home</li>
         <li class="tab-button" tab-data="section-news"><i class="fa-regular fa-newspaper"></i>News</li>
         <li class="tab-button" tab-data="section-special"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
-        <li class="tab-button"><i class="fa-solid fa-map-location-dot"></i>Map</li>
+        <li class="tab-button" tab-data="section-map"><i class="fa-solid fa-map-location-dot"></i>Map</li>
         <li class="tab-button"><i class="fa-solid fa-ticket"></i>Tickets</li>
         <li class="tab-button"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
         <li class="tab-button"><i class="fa-regular fa-circle-question"></i>FAQ</li>
@@ -69,6 +69,13 @@
       <div class="star-rating" id="section-news-star"></div>
       <p>Date : XX/XX/2024 ~ XX/XX/2024, Every Night 8:00 pm</p>
       <p>Bursts of vibrant colors lighting up the night sky, mesmerizing displays dancing to the rhythm of the crowd's excitement—the annual Fireworks Competition is back with a bang!</p>
+    </article>
+
+    <article class="tab-content hidden" id="section-map">
+      <div id="map-container">
+        <img src="./asset/pic/ParkMap.jpg" alt="Map">
+      </div>
+      <h2>DouDou Map</h2>
     </article>
 
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
