(1) Add Section - Ticket

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li class="tab-button" tab-data="section-news"><i class="fa-regular fa-newspaper"></i>News</li>
         <li class="tab-button" tab-data="section-special"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
         <li class="tab-button" tab-data="section-map"><i class="fa-solid fa-map-location-dot"></i>Map</li>
-        <li class="tab-button"><i class="fa-solid fa-ticket"></i>Tickets</li>
+        <li class="tab-button" tab-data="section-ticket"><i class="fa-solid fa-ticket"></i>Tickets</li>
         <li class="tab-button"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
         <li class="tab-button"><i class="fa-regular fa-circle-question"></i>FAQ</li>
         <li class="tab-button"><i class="fa-solid fa-envelope"></i>Contact us</li>
@@ -76,6 +76,19 @@
         <img src="./asset/pic/ParkMap.jpg" alt="Map">
       </div>
       <h2>DouDou Map</h2>
+    </article>
+
+    <article class="tab-content hidden" id="section-ticket">
+      <div id="section-ticket-img">
+        <img src="./asset/pic/Discount_Coupon.png" alt="Discount">
+      </div>
+      <h2>!! Special Offer + Coupon !!</h2>
+      <p>Food, Entries, Day-Pass Having Ultimated Special Offer. <i class="fa-regular fa-face-grin-stars"></i>  Invite Friends Now To Get <strong>Offer 1 + 2 + 3 + 4, and More Prices.</strong></p>
+      <p><strong class="offer">Offer 1:</strong>   First New Member Receive A 30% OFF Coupons For Entry And Food</p>
+      <p><strong class="offer">Offer 2:</strong>   Invite New Friends Receive Extra 40% OFF Coupons For Games</p>
+      <p><strong class="offer">Offer 3:</strong>   Visit Proper Counts Receive Further 50% OFF Coupons For Gifts</p>
+      <p><strong class="offer">Offer 4:</strong>   Join Lucky Draw Win A <strong>70% OFF</strong> Coupon For Family Annual Pass</p>
+
     </article>
 
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
