(1) Add Section - Get Here

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="tab-button" tab-data="section-special"><i class="fa-solid fa-wand-sparkles"></i></i>Specials</li>
         <li class="tab-button" tab-data="section-map"><i class="fa-solid fa-map-location-dot"></i>Map</li>
         <li class="tab-button" tab-data="section-ticket"><i class="fa-solid fa-ticket"></i>Tickets</li>
-        <li class="tab-button"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
+        <li class="tab-button" tab-data="section-gethere"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
         <li class="tab-button"><i class="fa-regular fa-circle-question"></i>FAQ</li>
         <li class="tab-button"><i class="fa-solid fa-envelope"></i>Contact us</li>
 
@@ -89,6 +89,15 @@
       <p><strong class="offer">Offer 3:</strong>   Visit Proper Counts Receive Further 50% OFF Coupons For Gifts</p>
       <p><strong class="offer">Offer 4:</strong>   Join Lucky Draw Win A <strong>70% OFF</strong> Coupon For Family Annual Pass</p>
 
+    </article>
+
+    <article class="tab-content hidden" id="section-gethere">
+      <h2>Public Transport</h2>
+      <ul id="transport">
+        <li><i class="fa-solid fa-bus"></i><span>Bus 101, 102, 305 & 407, HappyWay Stop</span></li>
+        <li><i class="fa-solid fa-train-subway"></i><span>Subway Central Line, HappyWay Station</span></li>
+        <li><i class="fa-solid fa-van-shuttle"></i><span>Shuttle Bus, Every 15, 30, 45 mins</span></li>
+      </ul>
     </article>
 
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
