(1) Add Section - FAQ (2) Add script to hover and expand the FAQ content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li class="tab-button" tab-data="section-map"><i class="fa-solid fa-map-location-dot"></i>Map</li>
         <li class="tab-button" tab-data="section-ticket"><i class="fa-solid fa-ticket"></i>Tickets</li>
         <li class="tab-button" tab-data="section-gethere"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
-        <li class="tab-button"><i class="fa-regular fa-circle-question"></i>FAQ</li>
+        <li class="tab-button" tab-data="section-faq"><i class="fa-regular fa-circle-question"></i>FAQ</li>
         <li class="tab-button"><i class="fa-solid fa-envelope"></i>Contact us</li>
 
       </ul>
@@ -97,6 +97,22 @@
         <li><i class="fa-solid fa-bus"></i><span>Bus 101, 102, 305 & 407, HappyWay Stop</span></li>
         <li><i class="fa-solid fa-train-subway"></i><span>Subway Central Line, HappyWay Station</span></li>
         <li><i class="fa-solid fa-van-shuttle"></i><span>Shuttle Bus, Every 15, 30, 45 mins</span></li>
+      </ul>
+    </article>
+
+    <article class="tab-content hidden" id="section-faq">
+      <h2>Frequently Asked Questions</h2>
+      <ul id="faq">
+        <li class="faq-question">Q: Minimum Age That Need A Entry Ticket ?<i class="fa-solid fa-circle-chevron-down"></i></li>
+        <li class="faq-answer">A: 10</li>
+        <li class="faq-question">Q: Can I Bring Our Own Food Inside ?<i class="fa-solid fa-circle-chevron-down"></i></li>
+        <li class="faq-answer">A: Sorry, Our Food Center Would Provide You Many Delicious Dining.</li>
+        <li class="faq-question">Q: Are There Locker Facilities Available ?<i class="fa-solid fa-circle-chevron-down"></i></li>
+        <li class="faq-answer">A: Yes, We Provide Locker Rentals To Store Personal Belongings During Their Visit.</li>
+        <li class="faq-question">Q: I Lost My Thing. What Should I Do ?<i class="fa-solid fa-circle-chevron-down"></i></li>
+        <li class="faq-answer">A: Please Go To Service Center, Or Call Our Hotline +1 (XXX) XXX-XXXX</li>
+        <li class="faq-question">Q: Are Pets Allowed In The Park?<i class="fa-solid fa-circle-chevron-down"></i></li>
+        <li class="faq-answer">A: With The exception Of Service Animals, Pets Are Not Allowed Inside The Park Premises.</li>
       </ul>
     </article>
 
