--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="tab-button" tab-data="section-ticket"><i class="fa-solid fa-ticket"></i>Tickets</li>
         <li class="tab-button" tab-data="section-gethere"><i class="fa-solid fa-van-shuttle"></i>Get Here</li>
         <li class="tab-button" tab-data="section-faq"><i class="fa-regular fa-circle-question"></i>FAQ</li>
-        <li class="tab-button"><i class="fa-solid fa-envelope"></i>Contact us</li>
+        <li class="tab-button" tab-data="section-contact"><i class="fa-solid fa-envelope"></i>Contact us</li>
 
       </ul>
     </nav>
@@ -114,6 +114,27 @@
         <li class="faq-question">Q: Are Pets Allowed In The Park?<i class="fa-solid fa-circle-chevron-down"></i></li>
         <li class="faq-answer">A: With The exception Of Service Animals, Pets Are Not Allowed Inside The Park Premises.</li>
       </ul>
+    </article>
+
+    <article class="tab-content hidden" id="section-contact">
+      <div id="section-contact-layout">
+        <h2>Contact us</h2>
+        <ul>
+          <li><i class="fa-solid fa-user"></i><input type="text" placeholder="Your Name"></li>
+          <li><i class="fa-solid fa-envelope"></i><input type="text" placeholder="Your Email"></li>
+          <li><i class="fa-solid fa-tag"></i><input type="text" placeholder="Subject"></li>
+          <li><textarea name="multiline" rows="6" cols="50" placeholder="Your Message"></textarea></li>
+          <li><button>Send</button></li>
+        </ul>
+        <hr>
+        <div id="contact">
+          <span><i class="fa-solid fa-building"></i> Mon ~ Sun, 8:00 ~ 21:00</span>
+          <span><i class="fa-solid fa-phone-flip"></i> +1 (XXX) XXX-XXXX</span>
+        </div>
+        <div id="section-contact-img">
+          <img src="./asset/pic/OurLocation.png" alt="Location">
+        </div>
+      </div>
     </article>
 
     <div id="home-logo">DouDouLand <img src="./asset/pic/DOUDOULAND_logo.png" alt="DouDouLand"> CopyRight &copy;</div>
