(1) Add Advertising at the Home Section - Add Animation for News, Special and Events

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
   <section>
 
     <article class="tab-content" id="section-home">
+      <div id="advertisement">
+        <p class="moving-text red">New Twisted Coaster!!</p>
+        <p class="moving-text blue">Special Offer + Coupon Up To 70% OFF</p>
+        <p class="moving-text green">FireWork! FireWork!</p>
+      </div>
       <img src="./asset/pic/DouDouLand.webp" alt="DouDouLand">
       <h2><i class="fa-solid fa-crown"></i><span>Welcome To DouDouLand</span><i class="fa-solid fa-crown"></i></h2>
       <p>DouDouLand, a wondrous paradise nestled in Vancouver HappyWay, where imagination knows no bounds! Our amusement park is a vibrant tapestry of excitement and enchantment, inviting visitors of all ages to experience a world brimming with thrills and adventure.</p>
