(1) Add Search Friendly Description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>DouDouLand - A Dream Park For All People</title>
   <meta name="description" content="A Ultimate Theme Park Make Your Dreams Come True">
-
+  <meta name="keywords" content="Best Theme Park, Good Theme Park, High Rate Theme Park, Best Amusement Park, Good Entertainment, Kids, Family Day, Discount, Coupon">
 </head>
 
 <body>
